# from-attention-to-assurance

./: LICENSE  README.md  feature_extraction.ipynb  model_training.ipynb
attention_assurance_package/: main.py  pyproject.toml
attention_assurance_package/attention_assurance/: __init__.py  assurance.py  bert_assurance.py  vit_assurance.py
attention_assurance_package/attention_assurance/utils/: __init__.py  feature_extractor.py  zones_extractor.py
