[tool.poetry]
name = "attention-assurance"
version = "0.1.0"
description = ""
authors = ["pouria.golshanrad <pouria.golshanrad@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
requests = "^2.32.3"
transformers = "^4.45.1"
torch = "^2.4.1"
pillow = "^10.4.0"
scipy = "^1.14.1"
captum = "^0.7.0"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
